Fix deprecated boxed type usage in Astronomy