@@ -2700,7 +2700,7 @@ public class Scores{
             String[][] sdata = new String[nn][mm];
             for(int i=0; i<nn; i++){
             for(int j=0; j<mm; j++){
-                    sdata[i][j] = (new Boolean(ddata[i][j])).toString();
+                    sdata[i][j] = (Boolean.valueOf(ddata[i][j])).toString();
                 }
             }
             return sdata;
